Fixed flickering...
-webkit-backface-visibility: hidden;

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ html {
 background-color: #404F58;
 font-smoothing: antialiased;
 -webkit-font-smoothing: antialiased;
+-webkit-backface-visibility: hidden;
 }
 
 li {
